--- a/src/Components/MainView/MainView.css
+++ b/src/Components/MainView/MainView.css
@@ -53,6 +53,12 @@ aside {
   color: red;
 }
 
+.wallet-input {
+  padding: 0 10px;
+  border: 1px solid lightgray;
+  border-radius: 30px;
+}
+
 .btn--add {
   width: 100%;
   margin-bottom: 30px;
