--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -1,8 +1,15 @@
 table {
   width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  text-align: center;
 }
 
 thead th {
   width: calc(100% / 4);
+  border: 1px solid #bbbbbb;
+}
+
+td {
   border: 1px solid #bbbbbb;
 }
