Input removing and validation of the same wallet addres  has been added

--- a/src/Components/MainView/MainView.css
+++ b/src/Components/MainView/MainView.css
@@ -4,7 +4,7 @@ label {
 }
 
 .search-input {
-  width: 235px;
+  width: 265px;
   height: 40px;
   padding: 0 10px;
   margin: 10px 0 5px 0;
@@ -45,10 +45,24 @@ aside {
   color: red;
 }
 
+.input-and-btn {
+  display: flex;
+}
+
 .wallet-input {
+  width: 235px;
   padding: 0 10px;
+  margin: 0 5px 5px 0;
   border: 1px solid lightgray;
   border-radius: 30px;
+}
+
+.btn--remove-input {
+  width: 22px;
+  height: 22px;
+  margin-bottom: 5px;
+  text-align: center;
+  font-size: 10px;
 }
 
 .btn--add {
