adding icons, working with the appearance of the application

--- a/src/Components/MainView/MainView.css
+++ b/src/Components/MainView/MainView.css
@@ -53,20 +53,22 @@ aside {
   display: flex;
 }
 
-.wallet-input {
+.input--walet {
   width: 235px;
   padding: 0 10px;
-  margin: 0 5px 5px 0;
+  margin-bottom: 5px;
   border: 1px solid lightgray;
   border-radius: 30px;
 }
 
 .btn--remove-input {
-  width: 22px;
-  height: 22px;
-  margin-bottom: 5px;
-  text-align: center;
-  font-size: 10px;
+  width: 30px;
+  height: 30px;
+  border: 0;
+}
+
+.btn--remove-input .trash-icon {
+  width: 20px;
 }
 
 .btn--add {
@@ -77,6 +79,25 @@ aside {
 .btn--get {
   width: 100%;
   margin-top: 10px;
+}
+
+.input--filter {
+  width: 235px;
+  height: 30px;
+  padding: 0 10px;
+  margin-bottom: 5px;
+  border: 1px solid lightgray;
+  border-radius: 30px;
+}
+
+.btn--filter {
+  width: 50px;
+  height: 35px;
+  border: 0;
+}
+
+.filter-icon {
+  width: 30px;
 }
 
 @media (min-width: 1024px) {
