--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -9,6 +9,7 @@ nav .container {
   align-items: center;
   justify-content: space-between;
   height: 100%;
+  padding: 0 5px;
   margin: 0 auto;
 }
 
@@ -17,5 +18,11 @@ nav .container {
 }
 
 .menu-icon {
-  width: 35px;
+  width: 25px;
+}
+
+@media (min-width: 1024px) {
+  nav .container {
+    padding: 0 5px;
+  }
 }
